--- a/composer.json
+++ b/composer.json
@@ -16,13 +16,10 @@
     ],
     "require": {
         "php": "^7.3|^8.0",
-        "tipoff/support": "^1.0"
+        "tipoff/support": "^1.2.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^6.0",
-        "phpunit/phpunit": "^9.3",
-        "spatie/laravel-ray": "^1.9",
-        "vimeo/psalm": "^4.4"
+        "tipoff/test-support": "^1.0"
     },
     "autoload": {
         "psr-4": {
