--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,11 @@
     ],
     "require": {
         "php": "^7.3|^8.0",
-        "tipoff/support": "^1.2.7"
+        "tipoff/authorization": "^1.0.1",
+        "tipoff/support": "^1.4.3"
     },
     "require-dev": {
-        "tipoff/test-support": "^1.0"
+        "tipoff/test-support": "^1.0.5"
     },
     "autoload": {
         "psr-4": {
