--- a/composer.json
+++ b/composer.json
@@ -16,13 +16,14 @@
     ],
     "require": {
         "php": "^7.3|^8.0",
+        "drewroberts/media": "^3.2.0",
         "tipoff/authorization": "^1.0.1",
         "tipoff/laravel-google-api": "^1.0",
         "tipoff/laravel-serpapi": "^1.0",
-        "tipoff/support": "^1.4.6"
+        "tipoff/support": "^1.4.8"
     },
     "require-dev": {
-        "tipoff/test-support": "^1.0.5"
+        "tipoff/test-support": "^1.0.6"
     },
     "autoload": {
         "psr-4": {
