--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "tipoff/authorization": "^2.8.5",
         "tipoff/laravel-google-api": "^2.0.0",
         "tipoff/laravel-serpapi": "^2.0.0",
-        "tipoff/support": "^2.1.3"
+        "tipoff/support": "^2.1.3",
+        "schulzefelix/laravel-search-console": "^1.7"
     },
     "require-dev": {
         "tipoff/test-support": "^2.0.0"
