--- a/composer.json
+++ b/composer.json
@@ -17,15 +17,15 @@
     "require": {
         "php": "^7.3|^8.0",
         "drewroberts/media": "^3.5.0",
-        "tipoff/addresses": "^2.8.8",
-        "tipoff/authorization": "^2.8.5",
-        "tipoff/laravel-google-api": "^2.0.0",
+        "schulzefelix/laravel-search-console": "^1.7",
+        "tipoff/addresses": "^2.8.10",
+        "tipoff/authorization": "^2.8.6",
+        "tipoff/laravel-google-api": "^2.1.0",
         "tipoff/laravel-serpapi": "^2.0.0",
-        "tipoff/support": "^2.1.3",
-        "schulzefelix/laravel-search-console": "^1.7"
+        "tipoff/support": "^2.1.5"
     },
     "require-dev": {
-        "tipoff/test-support": "^2.0.0"
+        "tipoff/test-support": "^2.0.1"
     },
     "autoload": {
         "psr-4": {
